--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">My Application2(rename)</string>
+    <string name="app_name">Music App</string>
     <string name="page_number">0</string>
 </resources>
